# opencv-

./: README.md
人脸识别/: mian.cpp
基础函数/: main.cpp
实验/: CMakeLists.txt  mian.cpp
形状检测/: CMakeLists.txt  main.cpp
扣除苹果/: main.cpp
绘制形状和文字/: main.cpp
视频/: main.cpp
读摄像头/: main.cpp
调整和剪裁/: main.cpp
车牌检测/: main.cpp
透视变换/: main.cpp
颜色检测/: main.cpp
